--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     max-width: 100%;
     overflow: auto;    
 }
-h1, Footer {
+h1, Footer, footer a {
     background-color: #9FCDF9;
     color: black;
     width: 100%;
@@ -18,7 +18,7 @@ h1, Footer {
 h1 {
     text-shadow: 1px 2px #000000;
 }
-footer a:hoover {
+footer a:hover {
     color: rgba(180, 180, 180, 1);
 }
 section {
